<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastdds</name>
  <version>3.2.2</version>
  <description>
  eProsima Fast DDS is a C++ implementation of the DDS (Data Distribution Service) standard of the OMG (Object Management Group). eProsima Fast DDS implements the RTPS (Real Time Publish Subscribe) protocol, which provides publisher-subscriber communications over unreliable transports such as UDP, as defined and maintained by the Object Management Group (OMG) consortium. RTPS is also the wire interoperability protocol defined for the Data Distribution Service (DDS) standard. eProsima Fast DDS expose an API to access directly the RTPS protocol, giving the user full access to the protocol internals.
  </description>
  <maintainer email="raulsanchezmateos@eprosima.com">Raul Sanchez Mateos</maintainer>
  <maintainer email="miguelcompany@eprosima.com">Miguel Company</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <replace>fastrtps</replace>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/Fast-DDS/issues</url>
  <url type="repository">https://github.com/eProsima/Fast-DDS</url>

  <build_depend>asio</build_depend>

  <depend>fastcdr</depend>
  <depend>foonathan_memory_vendor</depend>
  <depend>libssl-dev</depend>
  <depend>tinyxml2</depend>
  <depend>python3</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
